video overlap title fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,18 +67,11 @@ body {
     width: 100%;
     opacity: 20%;
     z-index: -1;
-
 }
 
 .txt-overlay {
     height: 100px;
     max-width: 900px;
-    position: absolute;
-    left: 0;
-    margin-left: auto;
-    margin-right: auto;
-    right: 0;
-    margin-top: 10px;
     text-transform: capitalize;
     z-index: 2;
 }
@@ -96,6 +89,13 @@ body {
     font-size: 2.5em;
     color: white;
     text-shadow: 3px 3px 3px #941d27;
+}
+
+.txt-mobile {
+    font-family: 'Suez One', Serif;
+    color: white;
+    text-shadow: 3px 3px 3px #941d27;
+    text-align: center;
 }
 
 .nav-title {
@@ -324,14 +324,7 @@ i {
 /*VIDEO*/
 
 #myVideo {
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
     height: 359.833px;
-    top: calc(42% + 67.78px);
-    margin-top: 40px;
     z-index: 2;
     -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,0.6),
                 -2px -2px 3px rgba(255, 255, 255, 0.6);
@@ -346,4 +339,15 @@ i {
 
 .bg-unlimited {
     background: #6ed0dd;
+}
+
+#vision {
+    position: relative;
+}
+
+.video-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
 }
